src/client/expr/snapshots/datafusion_delta_sharing__client__expr__serialize_op__serialize_column_op.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "column",
  "name": "column_name",
  "valueType": "string"
}
