src/client/expr/snapshots/datafusion_delta_sharing__client__expr__serialize_op__serialize_greater_than_or_equal_op.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "greaterThanOrEqual",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "int"
    },
    {
      "op": "literal",
      "value": "25",
      "valueType": "int"
    }
  ]
}
