src/client/expr/snapshots/datafusion_delta_sharing__client__expr__serialize_op__serialize_is_null_op.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "isNull",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "string"
    }
  ]
}
