src/client/expr/snapshots/datafusion_delta_sharing__client__expr__serialize_op__serialize_literal_op.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "literal",
  "value": "literal_value",
  "valueType": "string"
}
