src/client/expr/snapshots/datafusion_delta_sharing__client__expr__serialize_op__serialize_not_op.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "not",
  "children": [
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "a",
          "valueType": "string"
        },
        {
          "op": "literal",
          "value": "1",
          "valueType": "string"
        }
      ]
    }
  ]
}
